--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,12 +1,33 @@
 <html>
 <head>
   <title>Foundation is da bomb.</title>
+  <link rel="stylesheet" href="/css/normalize.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="/css/foundation.min.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8">
+
+  <script src="/js/vendor/modernizr.js"></script>
 </head>
 
 <body>
-  
-  <%= yield %>
 
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <div data-alert class="alert-box">
+          This is an alert!
+          <a href="#" class="close">&times;</a>
+        </div>
+
+
+        <%= yield %>
+      </div>
+    </div>
+  </div>
+
+  <script src="/js/vendor/jquery.js"></script>
+  <script src="/js/foundation.min.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
 </body>
 </html>
