--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,10 +13,14 @@
   <div class="container">
     <div class="row">
       <div class="column">
-        <div data-alert class="alert-box">
-          This is an alert!
-          <a href="#" class="close">&times;</a>
-        </div>
+
+        <% flash.keys.each do |type| %>
+          <div data-alert class="flash <%= type %> alert-box radius">
+            <%= flash[type] %>
+            <a href="#" class="close">&times;</a>
+          </div>
+        <% end %>
+
 
 
         <%= yield %>
