--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,28 @@
 <html>
 <head>
   <title>Foundation is da bomb.</title>
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/foundation.min.css">
+  <link rel="stylesheet" href="/css/style.css">
+
+  <script src="/js/vendor/modernizr.js"></script>
 </head>
 
   <body>
 
-    <%= yield %>
+    <div class="container">
+      <div class="row">
+        <div class="column">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
 
+    <script src="/js/vendor/jquery.js"></script>
+    <script src="/js/foundation.min.js"></script>
+
+    <script>
+      $(document).foundation();
+    </script>
   </body>
 </html>
