Add Sinatra Flash messages

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,13 @@
 
   <body>
 
+    <% flash.keys.each do |type| %>
+      <div data-alert class="flash <%= type %> alert-box radius">
+        <%= flash[type] %>
+        <a href="#" class="close">&times;</a>
+      </div>
+    <% end %>
+
     <div class="container">
       <div class="row">
         <div class="column">
