--- a/views/index.erb
+++ b/views/index.erb
@@ -1,28 +1,34 @@
 <h1>Welcome to the coolest website evarrrr!</h1>
-<h4>I would like this text to be centered.</h4>
+<h4 class="text-center">I would like this text to be centered.</h4>
 
 <h4>Here are three things I would like to show you in a row:</h4>
 
-<h6>Awesome Thing #1</h6>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim,
-  mi in imperdiet dignissim, dolor neque posuere nisi, sit amet bibendum massa
-  turpis quis tellus. Maecenas sit amet varius sapien. Vivamus lacus diam,
-  luctus vitae ultricies sed, congue sit amet tellus.
-</p>
+<div class="columns small-6 medium-4 large-2 green-thing">
+  <h6>Awesome Thing #1</h6>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim,
+    mi in imperdiet dignissim, dolor neque posuere nisi, sit amet bibendum massa
+    turpis quis tellus. Maecenas sit amet varius sapien. Vivamus lacus diam,
+    luctus vitae ultricies sed, congue sit amet tellus.
+  </p>
+</div>
 
-<h6>Awesome Thing #1</h6>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim,
-  mi in imperdiet dignissim, dolor neque posuere nisi, sit amet bibendum massa
-  turpis quis tellus. Maecenas sit amet varius sapien. Vivamus lacus diam,
-  luctus vitae ultricies sed, congue sit amet tellus.
-</p>
+<div class="columns small-6 medium-4 large-2">
+  <h6>Awesome Thing #1</h6>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim,
+    mi in imperdiet dignissim, dolor neque posuere nisi, sit amet bibendum massa
+    turpis quis tellus. Maecenas sit amet varius sapien. Vivamus lacus diam,
+    luctus vitae ultricies sed, congue sit amet tellus.
+  </p>
+</div>
 
-<h6>Awesome Thing #1</h6>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim,
-  mi in imperdiet dignissim, dolor neque posuere nisi, sit amet bibendum massa
-  turpis quis tellus. Maecenas sit amet varius sapien. Vivamus lacus diam,
-  luctus vitae ultricies sed, congue sit amet tellus.
-</p>
+<div class="columns small-6 medium-4 large-2 end">
+  <h6>Awesome Thing #1</h6>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissim,
+    mi in imperdiet dignissim, dolor neque posuere nisi, sit amet bibendum massa
+    turpis quis tellus. Maecenas sit amet varius sapien. Vivamus lacus diam,
+    luctus vitae ultricies sed, congue sit amet tellus.
+  </p>
+</div>
